Fixes style issues on IE

--- a/mockupconversion/scss/ie6.scss
+++ b/mockupconversion/scss/ie6.scss
@@ -8,13 +8,11 @@
   margin: 0;
   padding: 0;
   width: 646px;
+  overflow: hidden;
 
   .top {
     height: 26px;
     background: url(../images/maincontent-top.png) no-repeat;
-  }
-  .body {
-    _height: 247px;
   }
   .container {
     background: url(../images/ry_02.png) repeat-y;
