--- a/mockupconversion/scss/style.scss
+++ b/mockupconversion/scss/style.scss
@@ -16,6 +16,10 @@ ul {
   list-style: none;
 }
 
+.clear {
+  clear: both;
+}
+
 /* Page */
 body {
   background: url(../images/body-bg.jpg) repeat;
@@ -108,9 +112,7 @@ body {
   overflow: auto;
   width: 563px;
   min-height: 207px;
-  /*
   background-color: white;
-  */
   margin-left: 23px;
   border-radius: 18px;
   background-image: -moz-linear-gradient( -90deg, rgb(217,217,217) 0%, rgb(255,255,255) 100%);
